--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,12 +7,15 @@ body{
 }
 
 h6{ 
+   margin-top:10px;
    color:whitesmoke;
    font-size: 125%;
    position:absolute;
-   margin: 20px auto auto 40px;
+   left:20px;
    font-family: Lato, sans-serif;
    font-weight:lighter;
+   height:50px;
+   width:1500px;
 }
 
 h1{
@@ -92,8 +95,7 @@ a{
 }
 
 .nav-bar {
-    background-color:black;
-    position:relative;
+    position:fixed;
 }
 
 .side-bar{
