--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,39 +1,42 @@
 body{
-    
-   text-align: center;
    background-color:rgb(6, 0, 0);
    font-family: 'Montserrat', sans-serif;
    font-weight:lighter;
+   text-align: center;
 }
 
 h6{ 
-   margin-top:10px;
+    left:20px;
+    height:50px;
+    width:1500px;
    color:whitesmoke;
    font-size: 125%;
    position:absolute;
-   left:20px;
+   top:-25px;
    font-family: Lato, sans-serif;
    font-weight:lighter;
-   height:50px;
-   width:1500px;
+   
 }
 
 h1{
     color:whitesmoke;
     font-family: 'Montserrat';
     font-weight: lighter;
-    position : absolute;
-    margin:  300px 400px auto 200px;
     font-size: 500%;
+    position:absolute;
+        top:300px;
+        left:200px
 }
 
 h2 {
+    left: 65px;
+    top: 400px;
+    width: 1000px;
     color:whitesmoke;
     font-size: 2em;
     font-weight: normal;
     position: absolute;
-    margin: 400px 400px auto 65px;
-    width: 1000px;
+    
     
 }
 
@@ -44,27 +47,38 @@ h2 a:hover{
 h3{
     color:whitesmoke;
 }
+
 a{
     color:whitesmoke;
     text-decoration: none;
     
 }
 
+.nametohome{
+    position: absolute;
+    left: 40px;
+  }
+  
 .header-link1{
-    margin-left: 850px;
-    padding-right:35px;
+    position: absolute;
+    left: 1000px;
 }
 .header-link2{
-    padding: 30px;
+    position: absolute;
+    left: 1100px;
 }
 .header-link3{
-    padding:30px
+    position: absolute;
+    left: 1185px;
 }
 .header-link4{
     
-    padding-left:30px;
+    position: absolute;
+    left: 1320px;
+
     
 }
+
 
 .herelink{
     color : #5897fb;
@@ -72,18 +86,6 @@ a{
 
 .contactmelink{
     color : #5897fb;
-}
-
-.img1{
-    width: 25%;
-    float: left;
-    margin-right: 30px;
-}
-
-.img2{
-    width: 25%;
-    float: right;
-    margin-left:30px;
 }
 
 .para1{
@@ -125,9 +127,10 @@ a{
 
 #instagram{
     box-sizing: border-box;
-    padding-top:10px;
+    
     font-size: 20px;
     color:purple;
+    padding-top:10px;
     padding-bottom: 30px;
 }
 
@@ -145,22 +148,16 @@ a{
 }
 
 
-img{
-    width:200px;
-    height:200px;
-    
-}
-
 .middle-container  {
     position:absolute;
 }
 
 .me{
+    top:250px;
+        left:1000px;
+        width:500px;
+        height:460px;
 position: absolute;
-top:250px;
-left:1000px;
-width:500px;
-height:460px;
 }
 
 
@@ -176,21 +173,20 @@ height:460px;
 
 @keyframes window-colour-chaning{
 
-  0%{background-color: yellow;}
-  25%{background-color: orange;}
-  50%{background-color: #3F3B6C;}
-  75%{background-color: #5F6F94}
-  95%{background-color: orange;}
-  100%{background-color: yellow;}
+  0%{background-color: #2a276f;}
+  25%{background-color: #f0e600;}
+  50%{background-color: #f06d00;}
+  75%{background-color: #4d4d4d}
+  100%{background-color: #2a276f;}
 }
 
 .first-window-pane{
     width:82px;
     height:126px;
+    left:1000px;
+    top:150px;
     background-color: yellow;
     position:absolute;
-    margin-left:1000px;
-    margin-top:150px;
     animation-name:window-colour-chaning;
     animation-iteration-count: infinite;
     animation-duration:6s;
@@ -203,8 +199,8 @@ height:460px;
   height:126px;
   background-color: yellow;
   position:absolute;
-  margin-left:1100px;
-  margin-top:150px;
+  left:1100px;
+  top:150px;
   animation-name:window-colour-chaning;
     animation-iteration-count: infinite;
     animation-duration:6s;
@@ -214,10 +210,11 @@ height:460px;
 .third-window-pane{
   width:82px;
   height:126px;
+  left:1000px;
+  top:295px;
   background-color: yellow;
   position:absolute;
-  margin-left:1000px;
-  margin-top:295px;
+  
   animation-name:window-colour-chaning;
     animation-iteration-count: infinite;
     animation-duration:6s;
@@ -227,19 +224,24 @@ height:460px;
 .fourth-window-pane{
   width:82px;
   height:126px;
+  left:1100px;
+  top:295px;
   background-color: yellow;
   position:absolute;
-  margin-left:1100px;
-  margin-top:295px;
+  
   animation-name:window-colour-chaning;
   animation-iteration-count: infinite;
   animation-duration:6s;
   animation-timing-function:ease-in-out;
 }
 
+
+
+
 svg{
-    margin-left: 1100px;
-    margin-top: 150px;
+    position: absolute;
+    left: 1230px;
+    top: 150px;
 }
 
 .hourhand{
@@ -258,6 +260,7 @@ svg{
     top:10px;
 }
 
+
 @keyframes loader {
     0%{
         rotate: 0deg;
@@ -266,6 +269,115 @@ svg{
         rotate:720deg;
     }
 }
+
+@media screen and (max-width: 800px) {
+    body{
+        text-align: center;
+    }
+    h6{ left:20px;
+        margin-top:10px;
+        height:50px;
+        width:1500px;
+        
+    }
+    h2{
+        top: 100px;
+        width: 390px;
+        left: 1px;
+    }
+    h1{
+        position:absolute;
+        top:10px;
+        left:20px
+    }
+    .nametohome{
+        position: absolute;
+        left: -15px;
+        top: 20px;
+    }
+    .header-link1{
+        position: absolute;
+        left: 97px;
+        top: 20px;
+    }
+    .header-link2{
+        position: absolute;
+        left: 148px;
+        top: 20px;
+    }
+    .header-link3{
+        position: absolute;
+        left: 190px;
+        top: 20px;
+    }
+    .header-link4{
+        position: absolute;
+        left: 285px;
+        top: 20px;
+    }
+    .me{
+        top:385px;
+        left:16px;
+        width:500px;
+        height:460px;
+        right:1000px;
+        position:absolute;
+    }
+    .side-bar{
+       padding-top:20px;
+       padding-left:10px;
+       width:1px;
+       height:100%;
+       margin-top:450px;
+    }
+    #github{
+        padding-bottom:30px;
+    }
+    #quora{
+        padding-bottom: 30px;
+    }
+    #instagram{
+        padding-top:10px;
+    padding-bottom: 30px;
+    }
+    #stackoverflow{
+        padding-bottom: 30px;
+    }
+    .window{
+        width: 0px;
+    height:0px;
+    }
+    .first-window-pane{
+        width:82px;
+        height:126px;
+        left:60px;
+        top:250px;
+    }
+    .second-window-pane{
+        width:82px;
+        height:126px;
+        left:160px;
+        top:250px;
+    }
+    .third-window-pane{
+        width:82px;
+        height:126px;
+        left:60px;
+        top:400px;
+    }
+    .fourth-window-pane{
+        width:82px;
+        height:126px;
+        left:160px;
+        top:400px;
+    }
+    svg{
+        left: 270px;
+        top: 250px;
+    }
+    
+    }
+
 
 
 
